namespace GameSimulation.Domain.Enums
{
    public enum DevicePlatform { WindowsPC, Mobile }
}