namespace GameSimulation.Domain.Enums
{
    public enum GameGenre { Strategy, Adventure, RPG }
}