namespace GameSimulation.Domain.Enums
{
    public enum GameNotificationType { Info, Warning, Error, Success }
}